2003-06-05  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Memory leak on writes

	* lib/b_config.c (load_config_from_file): Memory leak during comments

2003-06-03  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_getbyfoo.c (bk_gethostbyfoo): Memory leak due to reentrant
	gethostbyname_r functions.

	* lib/b_pollio.c (bk_polling_io_write): Timeout processing
	confused--stale event queue jobs possible
	(bk_polling_io_read): Same confusion here, plus more from original
	implementation copy-paste error from io-write

2003-06-03  Alexander Dupuy  <dupuy@sysdetect.com>

	* ssl/Makefile: BK_NO_STRICT_PROTOTYPES=true for *BSD compile

	* include/libbk_oscompat.h: centralize environ declaration here

	* lib/b_general.c, lib/b_string.c, test/test_stringconv.c: nuke environ

2003-06-03  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_thread.c (bk_atomic_add_init): Reference counts useful
	even when threading not enabled.  Also, fix thread destruction bug
	(the thread list is a struct, not a CLC, baka)

	* lib/b_pollio.c (polling_io_ioh_handler): Defer CLC add until
	after we have totally fixed up pid, since peer thread may start
	mucking with pid immediately.

2003-06-02  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (ioht_raw_other): Batch multiple writes together

2003-06-03  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* ssl/b_ssl.c (bk_ssl_create_context): Support authentication.
	(ssl_threads_init): Provide OpenSSL locking callback.

2003-06-02  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* ssl/b_ssl.c (ssl_newsock): Support certificate-less servers.

2003-05-30  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* ssl/b_ssl.c (bk_ssl_make_conn_verbose): SSL client support.

	* src/bttcp.c (main): ssl-enable bttcp.

	* lib/b_ioh.c (bk_ioh_init): Added callback for closefun (in style
	of readfun and writefun).

2003-05-28  Brian Lindauer  <lindauer@malkmus.sysdetect.com>
